fix: normalize spacing on galleries page
style: change copyright icon for one more suited to the font
feature: added translation effect to the dev modal

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -81,14 +81,14 @@
 
 @media screen and (max-width: 900px) {
   .carousel-wrapper {
-    margin: var(--spacing-l) var(--spacing-m) var(--spacing-xl);
+    margin: var(--spacing-l) var(--spacing-m) var(--spacing-xxl);
   }
 }
 
 @media screen and (max-width: 500px) {
   .carousel-wrapper {
     margin: var(--spacing-l) var(--spacing-m)
-      calc(var(--spacing-l) + var(--spacing-xxl));
+      calc(var(--spacing-xl) + var(--spacing-xxl));
   }
 
   .splide__arrow {
